--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SIMPLE TEMPLATE</title>
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
+  <div class="wrapper">
+
+    <header class="header">
+      <div class="header-logo">
+        <a href="/">
+          <img src="assets/img/logo.png" alt="logo">
+        </a>
+      </div>
+      <nav class="menu">
+        <div class="menu__btn">
+          <div class="menu__btn-row"></div>
+          <div class="menu__btn-row"></div>
+          <div class="menu__btn-row"></div>
+        </div>
+        <ul class="menu__list">
+          <li class="menu__list-item active"><a href="#">Home</a></li>
+          <li class="menu__list-item"><a href="#">Products</a></li>
+          <li class="menu__list-item"><a href="#">F.A.Q.</a></li>
+          <li class="menu__list-item"><a href="#">Company</a></li>
+          <li class="menu__list-item"><a href="#">About</a></li>
+          <li class="menu__list-item"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.min.js"></script>
 </body>
+
 </html>
