--- a/index.html
+++ b/index.html
@@ -39,6 +39,54 @@
     </header>
   </div>
 
+  <div class="container">
+    <div class="carousel">
+      <div class="carousel-slides">
+        <div class="carousel-slide active">
+          <div class="carousel-slide__image">
+            <img src="assets/img/carousel-icon.png" alt="image">
+          </div>
+          <div class="carousel-slide__text">
+            <h3>LOREM IPSUM DOLOR...</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum.
+              Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas
+              aliquet velit pretium eget.</p>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="carousel-slide__image">
+            <img src="assets/img/carousel-icon.png" alt="image">
+          </div>
+          <div class="carousel-slide__text">
+            <h3>SLIDE 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque distinctio enim facere, fuga
+              labore maiores quas quia quisquam reprehenderit saepe ullam ut velit. Aperiam delectus dolore esse
+              molestiae reiciendis!</p>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="carousel-slide__image">
+            <img src="assets/img/carousel-icon.png" alt="image">
+          </div>
+          <div class="carousel-slide__text">
+            <h3>SLIDE 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam asperiores aut consectetur
+              consequuntur debitis, deserunt ducimus, eveniet fuga fugiat inventore nam odit placeat porro sint
+              tempore temporibus vero voluptas!</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-controls">
+        <a href="#" class="prev carousel-control">
+          <img src="assets/img/carousel-arrow.png" alt="">
+        </a>
+        <a href="#" class="next carousel-control">
+          <img src="assets/img/carousel-arrow.png" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
+
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.min.js"></script>
 </body>
