--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="header">
       <div class="header-logo">
-        <a href="/">
+        <a href="#">
           <img src="assets/img/logo.png" alt="logo">
         </a>
       </div>
@@ -37,55 +37,101 @@
         </ul>
       </nav>
     </header>
-  </div>
 
-  <div class="container">
-    <div class="carousel">
-      <div class="carousel-slides">
-        <div class="carousel-slide active">
-          <div class="carousel-slide__image">
-            <img src="assets/img/carousel-icon.png" alt="image">
+    <div class="container">
+
+      <div class="carousel">
+
+        <div class="carousel-slides">
+          <div class="carousel-slide active">
+            <div class="carousel-slide__image">
+              <img src="assets/img/carousel-icon.png" alt="image">
+            </div>
+            <div class="carousel-slide__text">
+              <h3>LOREM IPSUM DOLOR...</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum.
+                Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas
+                aliquet velit pretium eget.</p>
+            </div>
           </div>
-          <div class="carousel-slide__text">
-            <h3>LOREM IPSUM DOLOR...</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum.
-              Aliquam erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas
-              aliquet velit pretium eget.</p>
+          <div class="carousel-slide">
+            <div class="carousel-slide__image">
+              <img src="assets/img/carousel-icon.png" alt="image">
+            </div>
+            <div class="carousel-slide__text">
+              <h3>SLIDE 2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque distinctio enim facere, fuga
+                labore maiores quas quia quisquam reprehenderit saepe ullam ut velit. Aperiam delectus dolore esse
+                molestiae reiciendis!</p>
+            </div>
+          </div>
+          <div class="carousel-slide">
+            <div class="carousel-slide__image">
+              <img src="assets/img/carousel-icon.png" alt="img">
+            </div>
+            <div class="carousel-slide__text">
+              <h3>SLIDE 3</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam asperiores aut consectetur
+                consequuntur debitis, deserunt ducimus, eveniet fuga fugiat inventore nam odit placeat porro sint
+                tempore temporibus vero voluptas!</p>
+            </div>
           </div>
         </div>
-        <div class="carousel-slide">
-          <div class="carousel-slide__image">
-            <img src="assets/img/carousel-icon.png" alt="image">
-          </div>
-          <div class="carousel-slide__text">
-            <h3>SLIDE 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque distinctio enim facere, fuga
-              labore maiores quas quia quisquam reprehenderit saepe ullam ut velit. Aperiam delectus dolore esse
-              molestiae reiciendis!</p>
-          </div>
+
+        <div class="carousel-controls">
+          <a href="#" class="prev carousel-control">
+            <img src="assets/img/carousel-arrow.png" alt="img">
+          </a>
+          <a href="#" class="next carousel-control">
+            <img src="assets/img/carousel-arrow.png" alt="img">
+          </a>
         </div>
-        <div class="carousel-slide">
-          <div class="carousel-slide__image">
-            <img src="assets/img/carousel-icon.png" alt="image">
-          </div>
-          <div class="carousel-slide__text">
-            <h3>SLIDE 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam asperiores aut consectetur
-              consequuntur debitis, deserunt ducimus, eveniet fuga fugiat inventore nam odit placeat porro sint
-              tempore temporibus vero voluptas!</p>
-          </div>
+
+      </div>
+
+      <div class="left-sidebar">
+        <h2>Products...</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam
+          erat volutpat.</p>
+        <ul>
+          <li><span>Lorem ipsum dolor sit amet.</span></li>
+          <li><span>Lorem ipsum dolor sit amet.</span></li>
+          <li><span>Lorem ipsum dolor sit amet.</span></li>
+          <li><span>Lorem ipsum dolor sit amet.</span></li>
+          <li><span>Lorem ipsum dolor sit amet.</span></li>
+        </ul>
+      </div>
+
+      <div class="main">
+        <h2>Lorem Ipsum Dolor...</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam
+          erat volutpat. Duis rutrum pharetra lectus sit amet varius. Proin euismod pretium magna, egestas aliquet velit
+          pretium eget.</p>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum est massa,
+          varius eget placerat non, laoreet nec erat. Suspendisse potenti. Donec molestie porta mauris quis venenatis.
+          Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, <i>nascetur ridiculus mus. Vestibulum est
+            massa, varius eget placerat non, laoreet nec erat. Suspendisse potenti</i>. Donec molestie porta mauris quis
+          venenatis. Aliquam quis leo est, vel blandit turpis. Quisque sed metus diam, iaculis cursus nulla.</p>
+      </div>
+
+      <div class="bottom-sidebar">
+        <div class="bottom-sidebar__left">
+          <img src="assets/img/clock-icon.png" alt="clock-icon">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam
+            erat volutpat.</p>
+        </div>
+
+        <div class="bottom-sidebar__right">
+          <img src="assets/img/coffee-icon.png" alt="coffee-icon">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum iaculis arcu ut interdum. Aliquam
+            erat volutpat.</p>
         </div>
       </div>
-      <div class="carousel-controls">
-        <a href="#" class="prev carousel-control">
-          <img src="assets/img/carousel-arrow.png" alt="">
-        </a>
-        <a href="#" class="next carousel-control">
-          <img src="assets/img/carousel-arrow.png" alt="">
-        </a>
-      </div>
+
     </div>
   </div>
+
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.min.js"></script>
