--- a/index.html
+++ b/index.html
@@ -132,6 +132,51 @@
     </div>
   </div>
 
+  <footer class="footer">
+
+    <div class="wrapper">
+
+      <div class="footer-left twitter">
+        <div class="twitter__image">
+          <img src="assets/img/twitter-icon.png" alt="twitter logo">
+        </div>
+        <div class="twitter__description">
+          <span class="twitter__description-title">Twitter</span>
+          <span class="twitter__description-slogan">Follow Us</span>
+        </div>
+        <div class="twitter__post">
+          <p class="twitter__post-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <span class="twitter__post-date">Posted 4 Days Ago</span>
+        </div>
+      </div>
+
+      <div class="footer-right">
+        <nav class="menu">
+          <div class="menu__btn">
+            <div class="menu__btn-row"></div>
+            <div class="menu__btn-row"></div>
+            <div class="menu__btn-row"></div>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__list-item active"><a href="#">Home</a></li>
+            <li class="menu__list-item"><a href="#">Products</a></li>
+            <li class="menu__list-item"><a href="#">F.A.Q.</a></li>
+            <li class="menu__list-item"><a href="#">Company</a></li>
+            <li class="menu__list-item"><a href="#">About</a></li>
+            <li class="menu__list-item"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="copyright">
+          Template created by Mykola Mostovoi
+        </div>
+        <div class="footer-logo">
+          <a href="#"><img src="assets/img/logo.png" alt="logo"></a>
+        </div>
+      </div>
+
+    </div>
+
+  </footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.min.js"></script>
